<resources>
    <string name="app_name">Baking App</string>
    <string name="servings">Servings</string>
    <string name="URL">https://d17h27t6h515a5.cloudfront.net/topher/2017/May/59121517_baking/baking.json</string>
    <string name="steps">Steps</string>
    <string name="ingredients">Ingredients</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="app_icon">app_icon</string>
</resources>
