...
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/grayLight" />


        <TextView
            android:id="@+id/textViewNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/view2"
            android:layout_marginBottom="10dp"
...
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textSizeNormal"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/textViewPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/view2"
            android:layout_marginBottom="10dp"
...
