...
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textSizeLarge"
            android:textStyle="bold" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white" />

    </LinearLayout>
...
